hungarian_matching erstellt

--- a/tests/Zul scoreMatching.ipynb
+++ b/tests/Zul scoreMatching.ipynb
@@ -2,26 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "70073158",
+   "execution_count": 53,
+   "id": "288756d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e4d1659",
-   "metadata": {},
-   "source": [
-    "Daten laden und vorbereiten"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.optimize import linear_sum_assignment\n",
+    "import random\n",
+    "import math\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "dc8ab590",
+   "execution_count": 54,
+   "id": "bb95f488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,27 +29,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "51bd6792",
+   "execution_count": 55,
+   "id": "309c1d68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded: 150 people, 8 tasks\n",
+      "Total workload: 19.5 hours\n"
+     ]
+    }
+   ],
    "source": [
     "# Wandle die Kompetenzen in eine Liste um, um Filterung zu erleichtern\n",
-    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(r\",\\s*\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9169bcff",
-   "metadata": {},
-   "source": [
-    "Initialisierung"
+    "personen_df[\"kompetenzen_liste\"] = personen_df[\"kompetenzen\"].str.split(r\",\\s*\")\n",
+    "\n",
+    "print(f\"Loaded: {len(personen_df)} people, {len(teilaufgaben_df)} tasks\")\n",
+    "print(f\"Total workload: {teilaufgaben_df['aufwand'].sum():.1f} hours\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e93d6a78",
+   "execution_count": 56,
+   "id": "c8350cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "24a3188b",
+   "execution_count": 57,
+   "id": "ea31d322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,32 +73,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f647ac25",
-   "metadata": {},
-   "source": [
-    "Matching-Logik"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d9c544a5",
+   "execution_count": 58,
+   "id": "4c2d60b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen):\n",
+    "def berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta_projekt_id):\n",
     "    \"\"\"\n",
-    "    Prüft die Verfügbarkeit einer Person für eine gegebene Zeitspanne.\n",
-    "\n",
-    "    Args:\n",
-    "        person (pd.Series): Personendatensatz.\n",
-    "        ta_start (int): Startmonat (numerisch).\n",
-    "        ta_ende (int): Endmonat (numerisch).\n",
-    "        belegungen (dict): Bisherige Belegungen.\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: (bool verfügbar, float verfügbare Gesamtkapazität, dict verfügbarkeit je Monat)\n",
+    "    Improved availability calculation with project assignment check\n",
     "    \"\"\"\n",
     "    person_id = person[\"id\"]\n",
     "    verfügbar = True\n",
@@ -106,9 +90,18 @@
     "\n",
     "    for monat in range(ta_start, ta_ende + 1):\n",
     "        monat_label = f\"{monat:02d}/2025\"\n",
-    "        verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
-    "        belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
-    "        rest = max(0, verfügbarkeit - belegt)\n",
+    "        \n",
+    "        # Check existing project assignment\n",
+    "        belegung_label = f\"projektbelegung_{monat_label}\"\n",
+    "        aktuelle_belegung = person.get(belegung_label, \"Frei\")\n",
+    "        \n",
+    "        if aktuelle_belegung not in [\"Frei\", ta_projekt_id]:\n",
+    "            rest = 0  # Person already assigned to other project\n",
+    "        else:\n",
+    "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
+    "            belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
+    "            rest = max(0, verfügbarkeit - belegt)\n",
+    "\n",
     "        monatliche_restwerte[monat_label] = rest\n",
     "\n",
     "        if rest <= 0:\n",
@@ -116,31 +109,146 @@
     "            break\n",
     "        verfügbarkeit_summe += rest\n",
     "\n",
-    "    return verfügbar, verfügbarkeit_summe, monatliche_restwerte\n"
+    "    return verfügbar, verfügbarkeit_summe, monatliche_restwerte\n",
+    "\n",
+    "def calculate_person_score(person, ta, belegungen=None):\n",
+    "    \"\"\"\n",
+    "    Calculate person score for a task\n",
+    "    \"\"\"\n",
+    "    if belegungen is None:\n",
+    "        belegungen = {}\n",
+    "        \n",
+    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
+    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
+    "    \n",
+    "    verfügbar, verf_summe, _ = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
+    "    \n",
+    "    if verfügbar and verf_summe > 0:\n",
+    "        # Score based on availability, time budget and skill match\n",
+    "        kompetenz_bonus = 1.0\n",
+    "        if ta[\"kompetenz\"] in person[\"kompetenzen_liste\"]:\n",
+    "            kompetenz_bonus = 1.5  # Bonus for exact skill match\n",
+    "            \n",
+    "        score = verf_summe * person[\"zeitbudget\"] * kompetenz_bonus\n",
+    "        return round(score, 2)\n",
+    "    \n",
+    "    return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "011efc21",
+   "execution_count": 59,
+   "id": "5abfae0d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 1\n",
-      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 1\n",
+      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 0\n",
+      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 0\n",
       "Verfügbare Kandidaten für: Signalverarbeitung Sensor → 0\n",
       "Verfügbare Kandidaten für: Entwicklung Python-Modul → 0\n",
       "Verfügbare Kandidaten für: Statistische Auswertung → 0\n",
       "Verfügbare Kandidaten für: Optische Analyse → 0\n",
       "Verfügbare Kandidaten für: Datenbankmodellierung → 0\n",
-      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 0\n"
+      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 0\n",
+      "Greedy-Ansatz konnte keine vollständige Lösung finden. Versuche Backtracking...\n",
+      "Warnung: Auch mit Backtracking konnte keine vollständige Lösung gefunden werden\n"
      ]
     }
    ],
    "source": [
+    "def backtrack_matching(teilaufgaben_df, personen_df, belegungen, current_ta_index=0, matching_ergebnisse=None):\n",
+    "    \"\"\"\n",
+    "    Backtracking-Funktion zum Finden alternativer Zuweisungen, wenn der Greedy-Ansatz fehlschlägt.\n",
+    "    \n",
+    "    Args:\n",
+    "        teilaufgaben_df: DataFrame mit Teilaufgaben\n",
+    "        personen_df: DataFrame mit Personen\n",
+    "        belegungen: Aktuelle Belegungen\n",
+    "        current_ta_index: Aktueller Index der Teilaufgabe\n",
+    "        matching_ergebnisse: Aktuelle Matching-Ergebnisse\n",
+    "        \n",
+    "    Returns:\n",
+    "        tuple: (bool erfolgreich, list matching_ergebnisse)\n",
+    "    \"\"\"\n",
+    "    if matching_ergebnisse is None:\n",
+    "        matching_ergebnisse = []\n",
+    "        \n",
+    "    # Basisfall: Alle Teilaufgaben zugewiesen\n",
+    "    if current_ta_index >= len(teilaufgaben_df):\n",
+    "        return True, matching_ergebnisse\n",
+    "        \n",
+    "    ta = teilaufgaben_df.iloc[current_ta_index]\n",
+    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
+    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
+    "    ta_monate = ta_ende - ta_start + 1\n",
+    "    ta_monatsaufwand = ta[\"aufwand\"] / ta_monate\n",
+    "    restaufwand = ta[\"aufwand\"]\n",
+    "    \n",
+    "    # Alle möglichen Kandidaten für diese Teilaufgabe finden\n",
+    "    kandidaten = []\n",
+    "    for _, person in personen_df.iterrows():\n",
+    "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
+    "            continue\n",
+    "            \n",
+    "        verfügbar, verf_summe, monatliche_restwerte = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
+    "        \n",
+    "        if verfügbar and verf_summe > 0:\n",
+    "            score = round(verf_summe * person[\"zeitbudget\"], 2)\n",
+    "            kandidaten.append((person, score, verf_summe, monatliche_restwerte))\n",
+    "    \n",
+    "    # Kandidaten nach Score sortieren\n",
+    "    kandidaten = sorted(kandidaten, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Jeden Kandidaten ausprobieren\n",
+    "    for person, score, verf_summe, eintrag_monate in kandidaten:\n",
+    "        # Kopie des aktuellen Zustands erstellen\n",
+    "        temp_belegungen = {k: v.copy() for k, v in belegungen.items()}\n",
+    "        temp_matching = matching_ergebnisse.copy()\n",
+    "        \n",
+    "        pid = person[\"id\"]\n",
+    "        if pid not in temp_belegungen:\n",
+    "            temp_belegungen[pid] = {}\n",
+    "            \n",
+    "        verfügbarkeit_gesamt = sum(eintrag_monate.values())\n",
+    "        if verfügbarkeit_gesamt == 0:\n",
+    "            continue\n",
+    "            \n",
+    "        anteil = min(restaufwand, verfügbarkeit_gesamt)\n",
+    "        monatsanteil = anteil / ta_monate\n",
+    "        \n",
+    "        # Versuchen, diese Person zuzuweisen\n",
+    "        temp_matching.append({\n",
+    "            \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
+    "            \"teilaufgabe\": ta[\"bezeichnung\"],\n",
+    "            \"projekt_id\": ta[\"projekt_id\"],\n",
+    "            \"kompetenz\": ta[\"kompetenz\"],\n",
+    "            \"person_id\": pid,\n",
+    "            \"name\": person[\"name\"],\n",
+    "            \"zugewiesener_aufwand\": round(anteil, 2)\n",
+    "        })\n",
+    "        \n",
+    "        # Belegungen aktualisieren\n",
+    "        for monat_label in eintrag_monate:\n",
+    "            verbrauch = min(monatsanteil, eintrag_monate[monat_label])\n",
+    "            temp_belegungen[pid][monat_label] = temp_belegungen[pid].get(monat_label, 0) + verbrauch\n",
+    "            \n",
+    "        # Rekursiv versuchen, die restlichen Teilaufgaben zuzuweisen\n",
+    "        success, results = backtrack_matching(\n",
+    "            teilaufgaben_df, \n",
+    "            personen_df, \n",
+    "            temp_belegungen, \n",
+    "            current_ta_index + 1, \n",
+    "            temp_matching\n",
+    "        )\n",
+    "        \n",
+    "        if success:\n",
+    "            return True, results\n",
+    "            \n",
+    "    return False, matching_ergebnisse\n",
+    "\n",
     "# Hauptloop über alle Teilaufgaben\n",
     "for _, ta in teilaufgaben_df.iterrows():\n",
     "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
@@ -155,7 +263,7 @@
     "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
     "            continue\n",
     "\n",
-    "        verfügbar, verf_summe, monatliche_restwerte = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen)\n",
+    "        verfügbar, verf_summe, monatliche_restwerte = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
     "\n",
     "        if verfügbar and verf_summe > 0:\n",
     "            score = round(verf_summe * person[\"zeitbudget\"], 2)\n",
@@ -198,21 +306,26 @@
     "\n",
     "        restaufwand -= anteil\n",
     "\n",
-    "    print(f\"Verfügbare Kandidaten für: {ta['bezeichnung']} → {len(kandidaten)}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "392d4264",
-   "metadata": {},
-   "source": [
-    "Ergebnisse speichern"
+    "    print(f\"Verfügbare Kandidaten für: {ta['bezeichnung']} → {len(kandidaten)}\")\n",
+    "\n",
+    "# Prüfen, ob alle Teilaufgaben zugewiesen wurden\n",
+    "total_assigned = sum(item[\"zugewiesener_aufwand\"] for item in matching_ergebnisse)\n",
+    "total_needed = teilaufgaben_df[\"aufwand\"].sum()\n",
+    "\n",
+    "if total_assigned < total_needed:\n",
+    "    print(\"Greedy-Ansatz konnte keine vollständige Lösung finden. Versuche Backtracking...\")\n",
+    "    success, matching_ergebnisse = backtrack_matching(teilaufgaben_df, personen_df, {})\n",
+    "    if success:\n",
+    "        print(\"Backtracking hat eine vollständige Lösung gefunden!\")\n",
+    "    else:\n",
+    "        print(\"Warnung: Auch mit Backtracking konnte keine vollständige Lösung gefunden werden\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b755e3a1",
+   "execution_count": 60,
+   "id": "5abe8888",
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +341,6 @@
     "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
     "print(\"Matching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d20a32c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
