--- a/tests/Zul scoreMatching.ipynb
+++ b/tests/Zul scoreMatching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "id": "288756d1",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "from scipy.optimize import linear_sum_assignment\n",
     "import random\n",
     "import math\n",
-    "import time"
+    "import time\n",
+    "from hungarian_matching import hungarian_matching"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "id": "bb95f488",
    "metadata": {},
    "outputs": [],
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "id": "309c1d68",
    "metadata": {},
    "outputs": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "id": "c8350cf5",
    "metadata": {},
    "outputs": [],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "ea31d322",
    "metadata": {},
    "outputs": [],
@@ -74,70 +75,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "4c2d60b6",
+   "execution_count": 90,
+   "id": "6e7d7ccf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "HUNGARIAN ALGORITHM MATCHING\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "def berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta_projekt_id):\n",
-    "    \"\"\"\n",
-    "    Improved availability calculation with project assignment check\n",
-    "    \"\"\"\n",
-    "    person_id = person[\"id\"]\n",
-    "    verfügbar = True\n",
-    "    verfügbarkeit_summe = 0\n",
-    "    monatliche_restwerte = {}\n",
-    "\n",
-    "    for monat in range(ta_start, ta_ende + 1):\n",
-    "        monat_label = f\"{monat:02d}/2025\"\n",
-    "        \n",
-    "        # Check existing project assignment\n",
-    "        belegung_label = f\"projektbelegung_{monat_label}\"\n",
-    "        aktuelle_belegung = person.get(belegung_label, \"Frei\")\n",
-    "        \n",
-    "        if aktuelle_belegung not in [\"Frei\", ta_projekt_id]:\n",
-    "            rest = 0  # Person already assigned to other project\n",
-    "        else:\n",
-    "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
-    "            belegt = belegungen.get(person_id, {}).get(monat_label, 0)\n",
-    "            rest = max(0, verfügbarkeit - belegt)\n",
-    "\n",
-    "        monatliche_restwerte[monat_label] = rest\n",
-    "\n",
-    "        if rest <= 0:\n",
-    "            verfügbar = False\n",
-    "            break\n",
-    "        verfügbarkeit_summe += rest\n",
-    "\n",
-    "    return verfügbar, verfügbarkeit_summe, monatliche_restwerte\n",
-    "\n",
-    "def calculate_person_score(person, ta, belegungen=None):\n",
-    "    \"\"\"\n",
-    "    Calculate person score for a task\n",
-    "    \"\"\"\n",
-    "    if belegungen is None:\n",
-    "        belegungen = {}\n",
-    "        \n",
-    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
-    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
-    "    \n",
-    "    verfügbar, verf_summe, _ = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
-    "    \n",
-    "    if verfügbar and verf_summe > 0:\n",
-    "        # Score based on availability, time budget and skill match\n",
-    "        kompetenz_bonus = 1.0\n",
-    "        if ta[\"kompetenz\"] in person[\"kompetenzen_liste\"]:\n",
-    "            kompetenz_bonus = 1.5  # Bonus for exact skill match\n",
-    "            \n",
-    "        score = verf_summe * person[\"zeitbudget\"] * kompetenz_bonus\n",
-    "        return round(score, 2)\n",
-    "    \n",
-    "    return 0"
+    "# Run Hungarian Algorithm\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"HUNGARIAN ALGORITHM MATCHING\")\n",
+    "print(\"=\"*50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 96,
+   "id": "476ef446",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Hungarian Algorithm ===\n",
+      "Execution time: 0.027 seconds\n",
+      "Found assignments: 8\n",
+      "Total score: 7999992.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "hungarian_results, hungarian_time = hungarian_matching(teilaufgaben_df, personen_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "4c2d60b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hungarian Algorithm Results:\n",
+      "Found 8 assignments\n",
+      "Execution time: 0.045 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in hungarian_results:\n",
+    "    matching_ergebnisse.append({\n",
+    "        \"teilaufgabe_id\": result[\"teilaufgabe_id\"],\n",
+    "        \"teilaufgabe\": result[\"teilaufgabe\"],\n",
+    "        \"projekt_id\": result[\"projekt_id\"],\n",
+    "        \"kompetenz\": result[\"kompetenz\"],\n",
+    "        \"person_id\": result[\"person_id\"],\n",
+    "        \"name\": result[\"name\"],\n",
+    "        \"zugewiesener_aufwand\": result[\"zugewiesener_aufwand\"]\n",
+    "    })\n",
+    "\n",
+    "print(f\"\\nHungarian Algorithm Results:\")\n",
+    "print(f\"Found {len(matching_ergebnisse)} assignments\")\n",
+    "print(f\"Execution time: {hungarian_time:.3f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "id": "5abfae0d",
    "metadata": {},
    "outputs": [
@@ -145,186 +163,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verfügbare Kandidaten für: Entwurf CAD-Baugruppe → 0\n",
-      "Verfügbare Kandidaten für: Simulation FEM-Struktur → 0\n",
-      "Verfügbare Kandidaten für: Signalverarbeitung Sensor → 0\n",
-      "Verfügbare Kandidaten für: Entwicklung Python-Modul → 0\n",
-      "Verfügbare Kandidaten für: Statistische Auswertung → 0\n",
-      "Verfügbare Kandidaten für: Optische Analyse → 0\n",
-      "Verfügbare Kandidaten für: Datenbankmodellierung → 0\n",
-      "Verfügbare Kandidaten für: Thermodynamische Bewertung → 0\n",
-      "Greedy-Ansatz konnte keine vollständige Lösung finden. Versuche Backtracking...\n",
-      "Warnung: Auch mit Backtracking konnte keine vollständige Lösung gefunden werden\n"
+      "\n",
+      "==================================================\n",
+      "RESULTS SUMMARY\n",
+      "==================================================\n",
+      "Total assignments: 8\n",
+      "Total workload assigned: 19.5 hours\n",
+      "Total workload needed: 19.5 hours\n"
      ]
     }
    ],
    "source": [
-    "def backtrack_matching(teilaufgaben_df, personen_df, belegungen, current_ta_index=0, matching_ergebnisse=None):\n",
-    "    \"\"\"\n",
-    "    Backtracking-Funktion zum Finden alternativer Zuweisungen, wenn der Greedy-Ansatz fehlschlägt.\n",
-    "    \n",
-    "    Args:\n",
-    "        teilaufgaben_df: DataFrame mit Teilaufgaben\n",
-    "        personen_df: DataFrame mit Personen\n",
-    "        belegungen: Aktuelle Belegungen\n",
-    "        current_ta_index: Aktueller Index der Teilaufgabe\n",
-    "        matching_ergebnisse: Aktuelle Matching-Ergebnisse\n",
-    "        \n",
-    "    Returns:\n",
-    "        tuple: (bool erfolgreich, list matching_ergebnisse)\n",
-    "    \"\"\"\n",
-    "    if matching_ergebnisse is None:\n",
-    "        matching_ergebnisse = []\n",
-    "        \n",
-    "    # Basisfall: Alle Teilaufgaben zugewiesen\n",
-    "    if current_ta_index >= len(teilaufgaben_df):\n",
-    "        return True, matching_ergebnisse\n",
-    "        \n",
-    "    ta = teilaufgaben_df.iloc[current_ta_index]\n",
-    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
-    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
-    "    ta_monate = ta_ende - ta_start + 1\n",
-    "    ta_monatsaufwand = ta[\"aufwand\"] / ta_monate\n",
-    "    restaufwand = ta[\"aufwand\"]\n",
-    "    \n",
-    "    # Alle möglichen Kandidaten für diese Teilaufgabe finden\n",
-    "    kandidaten = []\n",
-    "    for _, person in personen_df.iterrows():\n",
-    "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
-    "            continue\n",
-    "            \n",
-    "        verfügbar, verf_summe, monatliche_restwerte = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
-    "        \n",
-    "        if verfügbar and verf_summe > 0:\n",
-    "            score = round(verf_summe * person[\"zeitbudget\"], 2)\n",
-    "            kandidaten.append((person, score, verf_summe, monatliche_restwerte))\n",
-    "    \n",
-    "    # Kandidaten nach Score sortieren\n",
-    "    kandidaten = sorted(kandidaten, key=lambda x: x[1], reverse=True)\n",
-    "    \n",
-    "    # Jeden Kandidaten ausprobieren\n",
-    "    for person, score, verf_summe, eintrag_monate in kandidaten:\n",
-    "        # Kopie des aktuellen Zustands erstellen\n",
-    "        temp_belegungen = {k: v.copy() for k, v in belegungen.items()}\n",
-    "        temp_matching = matching_ergebnisse.copy()\n",
-    "        \n",
-    "        pid = person[\"id\"]\n",
-    "        if pid not in temp_belegungen:\n",
-    "            temp_belegungen[pid] = {}\n",
-    "            \n",
-    "        verfügbarkeit_gesamt = sum(eintrag_monate.values())\n",
-    "        if verfügbarkeit_gesamt == 0:\n",
-    "            continue\n",
-    "            \n",
-    "        anteil = min(restaufwand, verfügbarkeit_gesamt)\n",
-    "        monatsanteil = anteil / ta_monate\n",
-    "        \n",
-    "        # Versuchen, diese Person zuzuweisen\n",
-    "        temp_matching.append({\n",
-    "            \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
-    "            \"teilaufgabe\": ta[\"bezeichnung\"],\n",
-    "            \"projekt_id\": ta[\"projekt_id\"],\n",
-    "            \"kompetenz\": ta[\"kompetenz\"],\n",
-    "            \"person_id\": pid,\n",
-    "            \"name\": person[\"name\"],\n",
-    "            \"zugewiesener_aufwand\": round(anteil, 2)\n",
-    "        })\n",
-    "        \n",
-    "        # Belegungen aktualisieren\n",
-    "        for monat_label in eintrag_monate:\n",
-    "            verbrauch = min(monatsanteil, eintrag_monate[monat_label])\n",
-    "            temp_belegungen[pid][monat_label] = temp_belegungen[pid].get(monat_label, 0) + verbrauch\n",
-    "            \n",
-    "        # Rekursiv versuchen, die restlichen Teilaufgaben zuzuweisen\n",
-    "        success, results = backtrack_matching(\n",
-    "            teilaufgaben_df, \n",
-    "            personen_df, \n",
-    "            temp_belegungen, \n",
-    "            current_ta_index + 1, \n",
-    "            temp_matching\n",
-    "        )\n",
-    "        \n",
-    "        if success:\n",
-    "            return True, results\n",
-    "            \n",
-    "    return False, matching_ergebnisse\n",
-    "\n",
-    "# Hauptloop über alle Teilaufgaben\n",
-    "for _, ta in teilaufgaben_df.iterrows():\n",
-    "    ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
-    "    ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
-    "    ta_monate = ta_ende - ta_start + 1\n",
-    "    ta_monatsaufwand = ta[\"aufwand\"] / ta_monate\n",
-    "    restaufwand = ta[\"aufwand\"]\n",
-    "    kandidaten = []\n",
-    "\n",
-    "    # Filtere Personen, die die benötigte Kompetenz besitzen\n",
-    "    for _, person in personen_df.iterrows():\n",
-    "        if ta[\"kompetenz\"] not in person[\"kompetenzen_liste\"]:\n",
-    "            continue\n",
-    "\n",
-    "        verfügbar, verf_summe, monatliche_restwerte = berechne_verfuegbarkeit(person, ta_start, ta_ende, belegungen, ta[\"projekt_id\"])\n",
-    "\n",
-    "        if verfügbar and verf_summe > 0:\n",
-    "            score = round(verf_summe * person[\"zeitbudget\"], 2)\n",
-    "            kandidaten.append((person, score, verf_summe, monatliche_restwerte))\n",
-    "\n",
-    "    # Sortiere Kandidaten nach ihrer nutzbaren Kapazität (absteigend)\n",
-    "    kandidaten = sorted(kandidaten, key=lambda x: x[1], reverse=True)\n",
-    "\n",
-    "    # Weise Kapazität zu, bis Aufwand gedeckt ist oder keine Ressourcen mehr vorhanden\n",
-    "    for person, score, verf_summe, eintrag_monate in kandidaten:\n",
-    "        if restaufwand <= 0:\n",
-    "            break\n",
-    "\n",
-    "        pid = person[\"id\"]\n",
-    "        if pid not in belegungen:\n",
-    "            belegungen[pid] = {}\n",
-    "\n",
-    "        verfügbarkeit_gesamt = sum(eintrag_monate.values())\n",
-    "        if verfügbarkeit_gesamt == 0:\n",
-    "            continue\n",
-    "\n",
-    "        anteil = min(restaufwand, verfügbarkeit_gesamt)\n",
-    "        monatsanteil = anteil / ta_monate\n",
-    "\n",
-    "        # Speichere Matching-Ergebnis\n",
-    "        matching_ergebnisse.append({\n",
-    "            \"teilaufgabe_id\": ta[\"teilaufgabe_id\"],\n",
-    "            \"teilaufgabe\": ta[\"bezeichnung\"],\n",
-    "            \"projekt_id\": ta[\"projekt_id\"],\n",
-    "            \"kompetenz\": ta[\"kompetenz\"],\n",
-    "            \"person_id\": pid,\n",
-    "            \"name\": person[\"name\"],\n",
-    "            \"zugewiesener_aufwand\": round(anteil, 2)\n",
-    "        })\n",
-    "\n",
-    "        # Aktualisiere belegte Verfügbarkeiten\n",
-    "        for monat_label in eintrag_monate:\n",
-    "            verbrauch = min(monatsanteil, eintrag_monate[monat_label])\n",
-    "            belegungen[pid][monat_label] = belegungen[pid].get(monat_label, 0) + verbrauch\n",
-    "\n",
-    "        restaufwand -= anteil\n",
-    "\n",
-    "    print(f\"Verfügbare Kandidaten für: {ta['bezeichnung']} → {len(kandidaten)}\")\n",
-    "\n",
-    "# Prüfen, ob alle Teilaufgaben zugewiesen wurden\n",
-    "total_assigned = sum(item[\"zugewiesener_aufwand\"] for item in matching_ergebnisse)\n",
-    "total_needed = teilaufgaben_df[\"aufwand\"].sum()\n",
-    "\n",
-    "if total_assigned < total_needed:\n",
-    "    print(\"Greedy-Ansatz konnte keine vollständige Lösung finden. Versuche Backtracking...\")\n",
-    "    success, matching_ergebnisse = backtrack_matching(teilaufgaben_df, personen_df, {})\n",
-    "    if success:\n",
-    "        print(\"Backtracking hat eine vollständige Lösung gefunden!\")\n",
-    "    else:\n",
-    "        print(\"Warnung: Auch mit Backtracking konnte keine vollständige Lösung gefunden werden\")\n",
-    "\n"
+    "# Display results summary\n",
+    "print(f\"\\n\" + \"=\"*50)\n",
+    "print(\"RESULTS SUMMARY\")\n",
+    "print(\"=\"*50)\n",
+    "print(f\"Total assignments: {len(matching_ergebnisse)}\")\n",
+    "print(f\"Total workload assigned: {sum(item['zugewiesener_aufwand'] for item in matching_ergebnisse):.1f} hours\")\n",
+    "print(f\"Total workload needed: {teilaufgaben_df['aufwand'].sum():.1f} hours\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 94,
+   "id": "7a154f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Assignments by task:\n",
+      "  - Entwurf CAD-Baugruppe: 3.0/3.0 hours assigned\n",
+      "  - Simulation FEM-Struktur: 2.5/2.5 hours assigned\n",
+      "  - Signalverarbeitung Sensor: 2.0/2.0 hours assigned\n",
+      "  - Entwicklung Python-Modul: 3.5/3.5 hours assigned\n",
+      "  - Statistische Auswertung: 2.0/2.0 hours assigned\n",
+      "  - Optische Analyse: 1.5/1.5 hours assigned\n",
+      "  - Datenbankmodellierung: 2.0/2.0 hours assigned\n",
+      "  - Thermodynamische Bewertung: 3.0/3.0 hours assigned\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show assignments by task\n",
+    "print(f\"\\nAssignments by task:\")\n",
+    "for _, ta in teilaufgaben_df.iterrows():\n",
+    "    task_assignments = [item for item in matching_ergebnisse if item['teilaufgabe_id'] == ta['teilaufgabe_id']]\n",
+    "    assigned_workload = sum(item['zugewiesener_aufwand'] for item in task_assignments)\n",
+    "    print(f\"  - {ta['bezeichnung']}: {assigned_workload:.1f}/{ta['aufwand']:.1f} hours assigned\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "id": "5abe8888",
    "metadata": {},
    "outputs": [
@@ -332,14 +225,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Matching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\n"
      ]
     }
    ],
    "source": [
+    "# Save results\n",
     "df_matching = pd.DataFrame(matching_ergebnisse)\n",
     "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
-    "print(\"Matching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
+    "print(f\"\\nMatching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
   }
  ],
