gantt-diagramm tagesweise (8h)

--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "51bd6792",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "9017ad31",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "d9c544a5",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "011efc21",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "b755e3a1",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "f93a65e4",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "6b505caa",
    "metadata": {},
    "outputs": [],
@@ -366,9 +366,9 @@
     "    person_id = person[\"id\"]\n",
     "    name = person[\"name\"]\n",
     "    aufgabe = ta[\"bezeichnung\"]\n",
-    "    aufwand_pm = eintrag.get(\"zugewiesener_aufwand\", 0.0)\n",
+    "    aufwand_stunden = eintrag[\"zugewiesene_stunden\"]\n",
     "\n",
-    "    stunden_gesamt = int(aufwand_pm * 160)  # 1 PM = 160h\n",
+    "    stunden_gesamt = int(aufwand_stunden * 160)\n",
     "    reststunden = stunden_gesamt\n",
     "\n",
     "    start_monat = int(ta[\"start\"].split(\"/\")[0])\n",
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "ea82b93e",
    "metadata": {},
    "outputs": [
@@ -450,6 +450,14 @@
     "pd.DataFrame(df_gantt).to_csv(\"gantt_daten.csv\", index=False)\n",
     "print(\"Gantt-Daten gespeichert in 'gantt_daten.csv'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aab29fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
