--- a/tests/Zul scoreMatching mit hungarian_matching.ipynb
+++ b/tests/Zul scoreMatching mit hungarian_matching.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "288756d1",
+   "execution_count": 1,
+   "id": "70073158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,21 @@
     "import random\n",
     "import math\n",
     "import time\n",
-    "from hungarian_matching import hungarian_matching\n",
-    "from greedy_matching import greedy_matching_with_fallback"
+    "from hungarian_matching import hungarian_matching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e4d1659",
+   "metadata": {},
+   "source": [
+    "Daten laden und vorbereiten"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "bb95f488",
+   "execution_count": 13,
+   "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "309c1d68",
+   "execution_count": 14,
+   "id": "51bd6792",
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +60,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9169bcff",
+   "metadata": {},
+   "source": [
+    "Initialisierung"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "c8350cf5",
+   "execution_count": 15,
+   "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "ea31d322",
+   "execution_count": 16,
+   "id": "24a3188b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "6e7d7ccf",
+   "execution_count": 17,
+   "id": "cba4045a",
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "476ef446",
+   "execution_count": 18,
+   "id": "32ddf68d",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +125,7 @@
      "text": [
       "\n",
       "=== Hungarian Algorithm ===\n",
-      "Execution time: 0.027 seconds\n",
+      "Execution time: 0.097 seconds\n",
       "Found assignments: 8\n",
       "Total score: 7999992.00\n"
      ]
@@ -122,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "4c2d60b6",
+   "execution_count": 19,
+   "id": "d9c544a5",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +148,7 @@
       "\n",
       "Hungarian Algorithm Results:\n",
       "Found 8 assignments\n",
-      "Execution time: 0.045 seconds\n"
+      "Execution time: 0.097 seconds\n"
      ]
     }
    ],
@@ -156,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "5abfae0d",
+   "execution_count": 20,
+   "id": "011efc21",
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "7a154f80",
+   "execution_count": 21,
+   "id": "705b6139",
    "metadata": {},
    "outputs": [
     {
@@ -217,9 +232,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "392d4264",
+   "metadata": {},
+   "source": [
+    "Ergebnisse speichern"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "5abe8888",
+   "execution_count": 22,
+   "id": "b755e3a1",
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +260,14 @@
     "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
     "print(f\"\\nMatching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20a32c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
