--- a/tests/Zul scoreMatching mit genetic_matching.ipynb
+++ b/tests/Zul scoreMatching mit genetic_matching.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "288756d1",
+   "execution_count": 1,
+   "id": "70073158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e4d1659",
+   "metadata": {},
+   "source": [
+    "Daten laden und vorbereiten"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "bb95f488",
+   "execution_count": 2,
+   "id": "dc8ab590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "309c1d68",
+   "execution_count": 3,
+   "id": "51bd6792",
    "metadata": {},
    "outputs": [
     {
@@ -52,9 +60,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9169bcff",
+   "metadata": {},
+   "source": [
+    "Initialisierung"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c8350cf5",
+   "execution_count": 4,
+   "id": "e93d6a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ea31d322",
+   "execution_count": 5,
+   "id": "24a3188b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "476ef446",
+   "execution_count": 6,
+   "id": "cba4045a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "GENETIC ALGORITHM MATCHING\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run Hungarian Algorithm\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"GENETIC ALGORITHM MATCHING\")\n",
+    "print(\"=\"*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "32ddf68d",
    "metadata": {},
    "outputs": [
     {
@@ -91,21 +131,56 @@
       "=== Genetic Algorithm ===\n",
       "Population size: 50\n",
       "Generations: 100\n",
-      "Tasks: 8, People: 150\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'assigned_workload' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m genetic_results, genetic_time = \u001b[43mgenetic_matching_with_elite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mteilaufgaben_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpersonen_df\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Git/team-10-personalmanager-gfai-bvvi-1/tests/genetic_matching.py:257\u001b[39m, in \u001b[36mgenetic_matching_with_elite\u001b[39m\u001b[34m(teilaufgaben_df, personen_df, population_size, generations)\u001b[39m\n\u001b[32m    255\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, params \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(param_combinations):\n\u001b[32m    256\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTrying parameter set \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi+\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(param_combinations)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m257\u001b[39m     results, _ = \u001b[43mgenetic_algorithm_matching\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    258\u001b[39m \u001b[43m        \u001b[49m\u001b[43mteilaufgaben_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpersonen_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mparams\u001b[49m\n\u001b[32m    259\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    261\u001b[39m     \u001b[38;5;66;03m# Calculate fitness of this result\u001b[39;00m\n\u001b[32m    262\u001b[39m     assignment = []\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Git/team-10-personalmanager-gfai-bvvi-1/tests/genetic_matching.py:173\u001b[39m, in \u001b[36mgenetic_algorithm_matching\u001b[39m\u001b[34m(teilaufgaben_df, personen_df, population_size, generations, mutation_rate, crossover_rate, tournament_size)\u001b[39m\n\u001b[32m    171\u001b[39m fitness_scores = []\n\u001b[32m    172\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m assignment \u001b[38;5;129;01min\u001b[39;00m population:\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m     fitness = \u001b[43mcalculate_fitness\u001b[49m\u001b[43m(\u001b[49m\u001b[43massignment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mteilaufgaben_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpersonen_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    174\u001b[39m     fitness_scores.append(fitness)\n\u001b[32m    176\u001b[39m     \u001b[38;5;66;03m# Track best solution\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Git/team-10-personalmanager-gfai-bvvi-1/tests/genetic_matching.py:82\u001b[39m, in \u001b[36mcalculate_fitness\u001b[39m\u001b[34m(assignment, teilaufgaben_df, personen_df, belegungen)\u001b[39m\n\u001b[32m     76\u001b[39m \u001b[38;5;66;03m# Calculate workload coverage bonus\u001b[39;00m\n\u001b[32m     77\u001b[39m     assigned_workload = \u001b[38;5;28msum\u001b[39m(\n\u001b[32m     78\u001b[39m         row[\u001b[33m\"\u001b[39m\u001b[33maufwand\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     79\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m i, (idx, row) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(teilaufgaben_df.iterrows())\n\u001b[32m     80\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m assignment[i] < \u001b[38;5;28mlen\u001b[39m(personen_df)\n\u001b[32m     81\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m row[\u001b[33m\"\u001b[39m\u001b[33mkompetenz\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m personen_df.iloc[assignment[i]][\u001b[33m\"\u001b[39m\u001b[33mkompetenzen_liste\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m82\u001b[39m \u001b[43mtotal_workload\u001b[49m = teilaufgaben_df[\u001b[33m\"\u001b[39m\u001b[33maufwand\u001b[39m\u001b[33m\"\u001b[39m].sum()\n\u001b[32m     83\u001b[39m coverage_bonus = (assigned_workload / total_workload) * \u001b[32m1000\u001b[39m\n\u001b[32m     85\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m total_score + coverage_bonus - constraint_penalty\n",
-      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'assigned_workload' where it is not associated with a value"
+      "Tasks: 8, People: 150\n",
+      "Generation 0: Best=-7597.4, Avg=-8577.2\n",
+      "Generation 20: Best=-7440.9, Avg=-7611.3\n",
+      "Generation 40: Best=-7038.4, Avg=-7188.2\n",
+      "Generation 60: Best=-7038.4, Avg=-7326.4\n",
+      "Generation 80: Best=-6584.5, Avg=-6754.3\n",
+      "Generation 99: Best=-6130.7, Avg=-6415.3\n",
+      "Execution time: 3.169 seconds\n",
+      "Best fitness: -6130.7\n",
+      "Found assignments: 8\n",
+      "\n",
+      "Trying parameter set 2/3\n",
+      "\n",
+      "=== Genetic Algorithm ===\n",
+      "Population size: 100\n",
+      "Generations: 150\n",
+      "Tasks: 8, People: 150\n",
+      "Generation 0: Best=-8000.0, Avg=-8691.2\n",
+      "Generation 20: Best=-7066.7, Avg=-7154.6\n",
+      "Generation 40: Best=-6130.7, Avg=-6291.0\n",
+      "Generation 60: Best=-5728.1, Avg=-5894.9\n",
+      "Generation 80: Best=-5728.1, Avg=-5860.8\n",
+      "Generation 100: Best=-5728.1, Avg=-5889.5\n",
+      "Generation 120: Best=-5728.1, Avg=-5939.3\n",
+      "Generation 140: Best=-5728.1, Avg=-5875.3\n",
+      "Generation 149: Best=-5728.1, Avg=-5894.9\n",
+      "Execution time: 11.374 seconds\n",
+      "Best fitness: -5728.1\n",
+      "Found assignments: 8\n",
+      "\n",
+      "Trying parameter set 3/3\n",
+      "\n",
+      "=== Genetic Algorithm ===\n",
+      "Population size: 75\n",
+      "Generations: 200\n",
+      "Tasks: 8, People: 150\n",
+      "Generation 0: Best=-8000.0, Avg=-8559.7\n",
+      "Generation 20: Best=-6261.5, Avg=-7005.8\n",
+      "Generation 40: Best=-6261.5, Avg=-6767.1\n",
+      "Generation 60: Best=-5728.1, Avg=-6389.8\n",
+      "Generation 80: Best=-5728.1, Avg=-6238.1\n",
+      "Generation 100: Best=-5728.1, Avg=-6320.2\n",
+      "Generation 120: Best=-5728.1, Avg=-6416.0\n",
+      "Generation 140: Best=-5728.1, Avg=-6338.5\n",
+      "Generation 160: Best=-5728.1, Avg=-6456.3\n",
+      "Generation 180: Best=-5728.1, Avg=-6484.5\n",
+      "Generation 199: Best=-5728.1, Avg=-6241.7\n",
+      "Execution time: 10.673 seconds\n",
+      "Best fitness: -5728.1\n",
+      "Found assignments: 8\n"
      ]
     }
    ],
@@ -115,19 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4c2d60b6",
+   "execution_count": 11,
+   "id": "d9c544a5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'genetic_results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m result \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgenetic_results\u001b[49m:\n\u001b[32m      2\u001b[39m     matching_ergebnisse.append({\n\u001b[32m      3\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mteilaufgabe_id\u001b[39m\u001b[33m\"\u001b[39m: result[\u001b[33m\"\u001b[39m\u001b[33mteilaufgabe_id\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      4\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mteilaufgabe\u001b[39m\u001b[33m\"\u001b[39m: result[\u001b[33m\"\u001b[39m\u001b[33mteilaufgabe\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mzugewiesener_aufwand\u001b[39m\u001b[33m\"\u001b[39m: result[\u001b[33m\"\u001b[39m\u001b[33mzugewiesener_aufwand\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     10\u001b[39m     })\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mGenetic Algorithm Results:\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'genetic_results' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Genetic Algorithm Results:\n",
+      "Found 24 assignments\n",
+      "Execution time: 25.224 seconds\n"
      ]
     }
    ],
@@ -150,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5abfae0d",
+   "execution_count": 12,
+   "id": "011efc21",
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +236,8 @@
       "==================================================\n",
       "RESULTS SUMMARY\n",
       "==================================================\n",
-      "Total assignments: 0\n",
-      "Total workload assigned: 0.0 hours\n",
+      "Total assignments: 24\n",
+      "Total workload assigned: 58.5 hours\n",
       "Total workload needed: 19.5 hours\n"
      ]
     }
@@ -180,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7a154f80",
+   "execution_count": 13,
+   "id": "705b6139",
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +264,14 @@
      "text": [
       "\n",
       "Assignments by task:\n",
-      "  - Entwurf CAD-Baugruppe: 0.0/3.0 hours assigned\n",
-      "  - Simulation FEM-Struktur: 0.0/2.5 hours assigned\n",
-      "  - Signalverarbeitung Sensor: 0.0/2.0 hours assigned\n",
-      "  - Entwicklung Python-Modul: 0.0/3.5 hours assigned\n",
-      "  - Statistische Auswertung: 0.0/2.0 hours assigned\n",
-      "  - Optische Analyse: 0.0/1.5 hours assigned\n",
-      "  - Datenbankmodellierung: 0.0/2.0 hours assigned\n",
-      "  - Thermodynamische Bewertung: 0.0/3.0 hours assigned\n"
+      "  - Entwurf CAD-Baugruppe: 9.0/3.0 hours assigned\n",
+      "  - Simulation FEM-Struktur: 7.5/2.5 hours assigned\n",
+      "  - Signalverarbeitung Sensor: 6.0/2.0 hours assigned\n",
+      "  - Entwicklung Python-Modul: 10.5/3.5 hours assigned\n",
+      "  - Statistische Auswertung: 6.0/2.0 hours assigned\n",
+      "  - Optische Analyse: 4.5/1.5 hours assigned\n",
+      "  - Datenbankmodellierung: 6.0/2.0 hours assigned\n",
+      "  - Thermodynamische Bewertung: 9.0/3.0 hours assigned\n"
      ]
     }
    ],
@@ -211,9 +285,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "392d4264",
+   "metadata": {},
+   "source": [
+    "Ergebnisse speichern"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "5abe8888",
+   "execution_count": 14,
+   "id": "b755e3a1",
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +313,14 @@
     "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
     "print(f\"\\nMatching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d20a32c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
