--- a/tests/Zul scoreMatching mit hungarian_matching.ipynb
+++ b/tests/Zul scoreMatching mit hungarian_matching.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "70073158",
+   "execution_count": 46,
+   "id": "288756d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,15 @@
     "import random\n",
     "import math\n",
     "import time\n",
-    "from hungarian_matching import hungarian_matching"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e4d1659",
-   "metadata": {},
-   "source": [
-    "Daten laden und vorbereiten"
+    "from hungarian_matching import hungarian_matching\n",
+    "from greedy_matching import greedy_matching_with_fallback\n",
+    "from genetic_matching import genetic_matching_with_elite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "dc8ab590",
+   "execution_count": 47,
+   "id": "bb95f488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "51bd6792",
+   "execution_count": 48,
+   "id": "309c1d68",
    "metadata": {},
    "outputs": [
     {
@@ -60,17 +54,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9169bcff",
-   "metadata": {},
-   "source": [
-    "Initialisierung"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e93d6a78",
+   "execution_count": 49,
+   "id": "c8350cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "24a3188b",
+   "execution_count": 50,
+   "id": "ea31d322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "cba4045a",
+   "execution_count": 51,
+   "id": "6e7d7ccf",
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "32ddf68d",
+   "execution_count": 52,
+   "id": "476ef446",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +111,7 @@
      "text": [
       "\n",
       "=== Hungarian Algorithm ===\n",
-      "Execution time: 0.097 seconds\n",
+      "Execution time: 0.101 seconds\n",
       "Found assignments: 8\n",
       "Total score: 7999992.00\n"
      ]
@@ -137,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d9c544a5",
+   "execution_count": 53,
+   "id": "4c2d60b6",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +134,7 @@
       "\n",
       "Hungarian Algorithm Results:\n",
       "Found 8 assignments\n",
-      "Execution time: 0.097 seconds\n"
+      "Execution time: 0.101 seconds\n"
      ]
     }
    ],
@@ -171,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "011efc21",
+   "execution_count": 54,
+   "id": "5abfae0d",
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "705b6139",
+   "execution_count": 55,
+   "id": "7a154f80",
    "metadata": {},
    "outputs": [
     {
@@ -232,17 +218,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "392d4264",
-   "metadata": {},
-   "source": [
-    "Ergebnisse speichern"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b755e3a1",
+   "execution_count": 56,
+   "id": "5abe8888",
    "metadata": {},
    "outputs": [
     {
@@ -260,14 +238,6 @@
     "df_matching.to_csv(\"matching_ergebnis.csv\", index=False)\n",
     "print(f\"\\nMatching abgeschlossen! Ergebnisse gespeichert in 'matching_ergebnis.csv'\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d20a32c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
