Effizienz des Scores berechnen

--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -452,12 +452,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd0ddde0",
+   "metadata": {},
+   "source": [
+    "Berechnung des Effizienz-Scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3aab29fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def berechne_effizienz_score(zuweisungen_df):\n",
+    "    \"\"\"Berechnet eine Effizienzmetrik basierend auf Anzahl Mitarbeiter und Pausenzeiten.\"\"\"\n",
+    "    # Nur relevante Spalten verwenden: Mitarbeiter, Start, Ende\n",
+    "    df = zuweisungen_df.copy()\n",
+    "    df[\"start\"] = pd.to_datetime(df[\"start\"])\n",
+    "    df[\"ende\"] = pd.to_datetime(df[\"ende\"])\n",
+    "\n",
+    "    # 1. Anzahl eingesetzter Mitarbeiter\n",
+    "    eingesetzte_mitarbeiter = df[\"mitarbeiter\"].nunique()\n",
+    "\n",
+    "    # 2. Pausen pro Mitarbeiter berechnen\n",
+    "    gesamtpause = timedelta(0)\n",
+    "\n",
+    "    for mid, gruppe in df.groupby(\"mitarbeiter\"):\n",
+    "        gruppe = gruppe.sort_values(\"start\")\n",
+    "        for i in range(1, len(gruppe)):\n",
+    "            pause = gruppe.iloc[i][\"start\"] - gruppe.iloc[i - 1][\"ende\"]\n",
+    "            if pause > timedelta(0):\n",
+    "                gesamtpause += pause\n",
+    "\n",
+    "    # Effizienz-Score (je kleiner desto besser)\n",
+    "    score = eingesetzte_mitarbeiter + gesamtpause.total_seconds() / 3600  # Pausen in Stunden\n",
+    "\n",
+    "    print(f\"Anzahl eingesetzter Mitarbeiter: {eingesetzte_mitarbeiter}\")\n",
+    "    print(f\"Gesamte Pausenzeit: {gesamtpause}\")\n",
+    "    print(f\"Effizienz-Score: {score:.2f}\")\n",
+    "    return score\n",
+    "\n",
+    "# Beispielaufruf (ggf. anpassen je nach Struktur der Zuweisungstabelle)\n",
+    "# ... berechne_effizienz_score(zuweisungen_df)\n"
+   ]
   }
  ],
  "metadata": {
