Berechnung zur Effizienz

--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -497,6 +497,66 @@
     "# Beispielaufruf (ggf. anpassen je nach Struktur der Zuweisungstabelle)\n",
     "# ... berechne_effizienz_score(zuweisungen_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd3d02c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def berechne_effizienz_score(df, mitarbeiter_col=\"mitarbeiter\", start_col=\"start\", end_col=None, dauer_col=None):\n",
+    "    \"\"\"\n",
+    "    Berechnet eine Effizienzmetrik:\n",
+    "    - Anzahl eingesetzter Mitarbeiter\n",
+    "    - Summe der Pausen zwischen Aufgaben einer Person\n",
+    "\n",
+    "    Parameter:\n",
+    "        df : DataFrame mit Aufgabenzuweisungen\n",
+    "        mitarbeiter_col : Spaltenname für Mitarbeitende\n",
+    "        start_col : Spaltenname für Startzeitpunkt\n",
+    "        end_col : Spaltenname für Endzeitpunkt (optional, wenn dauer_col gegeben)\n",
+    "        dauer_col : Spaltenname für Dauer (optional, wenn end_col nicht gegeben)\n",
+    "\n",
+    "    Rückgabe:\n",
+    "        float: Effizienz-Score (je kleiner, desto besser)\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "    df[start_col] = pd.to_datetime(df[start_col])\n",
+    "\n",
+    "    # Endzeit berechnen, falls nur Dauer vorhanden\n",
+    "    if end_col is None and dauer_col is not None:\n",
+    "        df[\"ende\"] = df[start_col] + pd.to_timedelta(df[dauer_col], unit=\"h\")\n",
+    "    elif end_col is not None:\n",
+    "        df[\"ende\"] = pd.to_datetime(df[end_col])\n",
+    "    else:\n",
+    "        raise ValueError(\"Entweder end_col oder dauer_col muss angegeben werden.\")\n",
+    "\n",
+    "    df[\"mitarbeiter\"] = df[mitarbeiter_col]\n",
+    "    df[\"start\"] = df[start_col]\n",
+    "\n",
+    "    # 1. Anzahl eingesetzter Mitarbeiter\n",
+    "    eingesetzte_mitarbeiter = df[\"mitarbeiter\"].nunique()\n",
+    "\n",
+    "    # 2. Pausen berechnen\n",
+    "    gesamtpause = timedelta(0)\n",
+    "\n",
+    "    for mid, gruppe in df.groupby(\"mitarbeiter\"):\n",
+    "        gruppe = gruppe.sort_values(\"start\")\n",
+    "        for i in range(1, len(gruppe)):\n",
+    "            pause = gruppe.iloc[i][\"start\"] - gruppe.iloc[i - 1][\"ende\"]\n",
+    "            if pause > timedelta(0):\n",
+    "                gesamtpause += pause\n",
+    "\n",
+    "    # Score berechnen\n",
+    "    score = eingesetzte_mitarbeiter + gesamtpause.total_seconds() / 3600\n",
+    "\n",
+    "    print(f\"Anzahl eingesetzter Mitarbeiter: {eingesetzte_mitarbeiter}\")\n",
+    "    print(f\"Gesamte Pausenzeit: {gesamtpause}\")\n",
+    "    print(f\"Effizienz-Score: {score:.2f}\")\n",
+    "    return score\n",
+    "### Ausgabe muss bearbeitet werden"
+   ]
   }
  ],
  "metadata": {
