calculate skills - add

--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -557,6 +557,87 @@
     "    return score\n",
     "### Ausgabe muss bearbeitet werden"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "19946863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_fitness_with_skills(assignment, teilaufgaben_df, personen_df, belegungen=None):\n",
+    "    \"\"\"\n",
+    "    Calculate fitness score with skill proficiency and workload fairness.\n",
+    "    \"\"\"\n",
+    "    if belegungen is None:\n",
+    "        belegungen = {}\n",
+    "        \n",
+    "    total_score = 0\n",
+    "    constraint_penalty = 0\n",
+    "    temp_belegungen = deepcopy(belegungen)\n",
+    "    person_workload = {p[\"id\"]: 0 for _, p in personen_df.iterrows()}\n",
+    "\n",
+    "    for task_idx, person_idx in enumerate(assignment):\n",
+    "        if person_idx >= len(personen_df):\n",
+    "            continue\n",
+    "        \n",
+    "        ta = teilaufgaben_df.iloc[task_idx]\n",
+    "        person = personen_df.iloc[person_idx]\n",
+    "        person_id = person[\"id\"]\n",
+    "\n",
+    "        # --- Skill Matching with Level ---\n",
+    "        task_skill = ta[\"kompetenz\"]\n",
+    "        task_level = int(ta.get(\"kompetenz_level\", 2))  # default = intermediate\n",
+    "        person_skills = {k.split(\":\")[0]: int(k.split(\":\")[1]) for k in person[\"kompetenzen_liste\"]}\n",
+    "        person_level = person_skills.get(task_skill, 0)\n",
+    "\n",
+    "        if person_level == 0:\n",
+    "            constraint_penalty += 1000  # missing skill\n",
+    "            continue\n",
+    "\n",
+    "        # Bonus: proportional to level match\n",
+    "        skill_score = (person_level / task_level) ** 2\n",
+    "\n",
+    "        # --- Availability Matching ---\n",
+    "        ta_start = int(ta[\"start\"].split(\"/\")[0])\n",
+    "        ta_ende = int(ta[\"ende\"].split(\"/\")[0])\n",
+    "        ta_monate = ta_ende - ta_start + 1\n",
+    "        ta_monatsaufwand = ta[\"aufwand\"] / ta_monate\n",
+    "\n",
+    "        if person_id not in temp_belegungen:\n",
+    "            temp_belegungen[person_id] = {}\n",
+    "\n",
+    "        available_hours = 0\n",
+    "        for monat in range(ta_start, ta_ende + 1):\n",
+    "            monat_label = f\"{monat:02d}/2025\"\n",
+    "            verfügbarkeit = person.get(f\"verfuegbarkeit_{monat_label}\", 0)\n",
+    "            belegt = temp_belegungen[person_id].get(monat_label, 0)\n",
+    "            rest = max(0, verfügbarkeit - belegt)\n",
+    "            available_hours += rest\n",
+    "\n",
+    "        if available_hours >= ta[\"aufwand\"]:\n",
+    "            availability_score = available_hours * skill_score\n",
+    "            total_score += availability_score\n",
+    "            person_workload[person_id] += ta[\"aufwand\"]\n",
+    "\n",
+    "            for monat in range(ta_start, ta_ende + 1):\n",
+    "                monat_label = f\"{monat:02d}/2025\"\n",
+    "                temp_belegungen[person_id][monat_label] = temp_belegungen[person_id].get(monat_label, 0) + ta_monatsaufwand\n",
+    "        else:\n",
+    "            constraint_penalty += 200\n",
+    "\n",
+    "    # --- Fair Workload Bonus ---\n",
+    "    for person_id, assigned in person_workload.items():\n",
+    "        max_hours = personen_df.set_index(\"id\").loc[person_id][\"zeitbudget\"] * 160\n",
+    "        fair_bonus = max(0, 1 - (assigned / max_hours)) * 100\n",
+    "        total_score += fair_bonus\n",
+    "\n",
+    "    total_workload = teilaufgaben_df[\"aufwand\"].sum()\n",
+    "    assigned_workload = sum(person_workload.values())\n",
+    "    coverage_bonus = (assigned_workload / total_workload) * 1000\n",
+    "\n",
+    "    return total_score + coverage_bonus - constraint_penalty\n"
+   ]
   }
  ],
  "metadata": {
