--- a/tests/scoreMatching_stundenbasiert.ipynb
+++ b/tests/scoreMatching_stundenbasiert.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "70073158",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from copy import deepcopy\n"
    ]
   },
   {
